--- a/ETL/ETL1/ETL1.ipynb
+++ b/ETL/ETL1/ETL1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,8 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "import zipfile\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from datetime import datetime, timedelta"
    ]
   },
   {
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +53,7 @@
        "True"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -289,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Caracteristic_id', 'Listen_id', 'Description_caract']\n"
+      "['Caracteristic_id', 'Listen_id']\n"
      ]
     }
    ],
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +535,7 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +564,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +591,7 @@
        "(8807, 12)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +672,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +779,7 @@
        "Name: cantidad_actores, dtype: int64"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +833,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +917,7 @@
        "Name: date_added, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,19 +969,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "object\n"
+      "0       2021-09-25\n",
+      "1       2021-09-24\n",
+      "2       2021-09-24\n",
+      "3       2021-09-24\n",
+      "4       2021-09-24\n",
+      "           ...    \n",
+      "8802    2019-11-20\n",
+      "8803    2019-07-01\n",
+      "8804    2019-11-01\n",
+      "8805    2020-01-11\n",
+      "8806    2019-03-02\n",
+      "Name: date_added, Length: 8793, dtype: object\n"
      ]
     }
    ],
    "source": [
-    "print(df2['date_added'].dtypes)"
+    "print(df2['date_added'])"
    ]
   },
   {
@@ -992,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1013,7 @@
        "array(['Movie', 'TV Show'], dtype=object)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2068,7 +2080,7 @@
        " ...]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2086,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2095,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2111,7 +2123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2127,27 +2139,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista_show = ['TVShow', 'Movie']\n",
+    "lista_show = ['TV Show', 'Movie']\n",
     "df_show= pd.DataFrame(lista_show, columns=['Type'])\n",
     "lista_from_df = df_show['Type'].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['TVShow', 'Movie']"
+       "['TV Show', 'Movie']"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,20 +2177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_carct = df2[['listed_in', 'description']]"
+    "df_carct = df2['listed_in']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista_caract = df_carct.values.tolist()"
+    "lista_caract = df_carct.tolist()"
    ]
   },
   {
@@ -2190,16 +2202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_shows = df2[['title','country','rating','director']]"
+    "df_shows = df2[['title','country','rating','director','cantidad_actores','type','listed_in','date_added','release_year']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2248,26 +2260,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "consulta_sql = 'INSERT INTO Type_show (Type_show) VALUES (?)'\n",
-    "lista_show_ajustada = [(val,) for val in lista_from_df]\n",
-    "cursor.executemany(consulta_sql,  lista_show_ajustada)\n",
+    "consulta_sql = '''\n",
+    "IF NOT EXISTS (SELECT 1 FROM Type_show WHERE Type_show = ?)\n",
+    "BEGIN\n",
+    "    INSERT INTO Type_show (Type_show) VALUES (?)\n",
+    "END\n",
+    "'''\n",
+    "\n",
+    "# Ajustar la lista de valores para que cada tupla tenga el valor dos veces (una para el chequeo y otra para la inserción)\n",
+    "lista_show_ajustada = [(val, val) for val in lista_from_df]\n",
+    "\n",
+    "cursor.executemany(consulta_sql, lista_show_ajustada)\n",
+    "conn.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se están cargando los mismos datos o no hay nuevos datos para cargar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "valores_unicos_para_insertar = []\n",
+    "\n",
+    "\n",
+    "for val in lista_cats:\n",
+    "    cursor.execute(\"SELECT COUNT(*) FROM Casts WHERE Size_cast = ?\", (val,))\n",
+    "    if cursor.fetchone()[0] == 0:  # Si el valor no existe en la base de datos\n",
+    "        valores_unicos_para_insertar.append((val,))\n",
+    "\n",
+    "\n",
+    "if valores_unicos_para_insertar:\n",
+    "    consulta_sql = 'INSERT INTO Casts (Size_cast) VALUES (?)'\n",
+    "    cursor.executemany(consulta_sql, valores_unicos_para_insertar)\n",
+    "    conn.commit()\n",
+    "else:\n",
+    "    print(\"Se están cargando los mismos datos o no hay nuevos datos para cargar.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fecha de inicio y fecha actual\n",
+    "fecha_inicio = fecha_mas_antigua\n",
+    "fecha_actual = datetime.now()\n",
+    "\n",
+    "# Generar e insertar fechas\n",
+    "fecha = fecha_inicio\n",
+    "while fecha <= fecha_actual:\n",
+    "    year = fecha.year\n",
+    "    month = fecha.month\n",
+    "    day = fecha.day\n",
+    "    \n",
+    "    consulta_sql = '''\n",
+    "    IF NOT EXISTS (SELECT 1 FROM Date_show_added WHERE Fecha = ?)\n",
+    "    BEGIN\n",
+    "        INSERT INTO Date_show_added (Fecha, Year_added, Month_added, Day_added) VALUES (?, ?, ?, ?)\n",
+    "    END\n",
+    "    '''\n",
+    "    # Suministrar fechas  para la verificación y otra para la inserción\n",
+    "    cursor.execute(consulta_sql, (fecha.strftime('%Y-%m-%d'), fecha.strftime('%Y-%m-%d'), year, month, day))\n",
+    "    fecha += timedelta(days=1)\n",
+    "\n",
     "conn.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se están cargando los mismos datos o no hay nuevos datos para cargar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "valores_unicos_para_insertar = []\n",
+    "\n",
+    "\n",
+    "for val in lista_dsr:\n",
+    "    cursor.execute(\"SELECT COUNT(*) FROM Date_show_release WHERE Year_release = ?\", (val,))\n",
+    "    if cursor.fetchone()[0] == 0:  # Si el valor no existe en la base de datos\n",
+    "        valores_unicos_para_insertar.append((val,))\n",
+    "\n",
+    "\n",
+    "if valores_unicos_para_insertar:\n",
+    "    consulta_sql = 'INSERT INTO Date_show_release (Year_release) VALUES (?)'\n",
+    "    cursor.executemany(consulta_sql, valores_unicos_para_insertar)\n",
+    "    conn.commit()\n",
+    "else:\n",
+    "    print(\"Se están cargando los mismos datos o no hay nuevos datos para cargar.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se están cargando los mismos datos o no hay nuevos datos para cargar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "valores_unicos_para_insertar = []\n",
+    "\n",
+    "\n",
+    "for val in lista_caract:\n",
+    "    cursor.execute(\"SELECT COUNT(*) FROM Caracteristics WHERE Listen_id = ?\", (val,))\n",
+    "    if cursor.fetchone()[0] == 0:  # Si el valor no existe en la base de datos\n",
+    "        valores_unicos_para_insertar.append((val,))\n",
+    "\n",
+    "\n",
+    "if valores_unicos_para_insertar:\n",
+    "    consulta_sql = 'INSERT INTO Caracteristics (Listen_id) VALUES (?)'\n",
+    "    cursor.executemany(consulta_sql, valores_unicos_para_insertar)\n",
+    "    conn.commit()\n",
+    "else:\n",
+    "    print(\"Se están cargando los mismos datos o no hay nuevos datos para cargar.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "consulta_sql = 'INSERT INTO Casts (Size_cast) VALUES (?)'\n",
-    "lista_cast_ajustada = [(val,) for val in lista_cats]\n",
-    "cursor.executemany(consulta_sql,  lista_cast_ajustada)\n",
-    "conn.commit()"
+    "\n",
+    "\n",
+    "consulta_sql = '''\n",
+    "IF NOT EXISTS (SELECT 1 FROM Shows WHERE Title = ?)\n",
+    "BEGIN\n",
+    "    INSERT INTO Shows (Title, Country, Rating, Director, Cast_id, Type_show_id, Caracteristic_id, Date_show_added_id, Date_show_release_id)\n",
+    "        VALUES (?, ?, ?, ?, \n",
+    "        (SELECT TOP 1 Cast_id FROM Casts WHERE Size_cast = ?),\n",
+    "        (SELECT TOP 1 Type_show_id FROM Type_show WHERE Type_show = ?), \n",
+    "        (SELECT TOP 1 Caracteristic_id FROM Caracteristics WHERE Listen_id = ?), \n",
+    "        (SELECT TOP 1 Date_show_added_id FROM Date_show_added WHERE Fecha = ?), \n",
+    "        (SELECT TOP 1 Date_show_release_id FROM Date_show_release WHERE Year_release = ?))\n",
+    "END\n",
+    "'''\n",
+    "#[['title','country','rating','director','cantidad_actores','type','listed_in','date_added','release_year']]\n",
+    "\n",
+    "\n",
+    "lista_show_ajustada = [(val[0],) + tuple(val) for val in lista_shows]  \n",
+    "\n",
+    "cursor.executemany(consulta_sql, lista_show_ajustada)\n",
+    "conn.commit()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se culmina el proceso ETL"
    ]
   }
  ],
